<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.dell.fireapp.RegisterActivity">

    <include
        android:id="@+id/register_appbar"
        layout="@layout/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginStart="16sp"
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_appbar"
        android:layout_marginTop="20dp"
        android:text="Create Account"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:layout_marginStart="16sp"
        android:id="@+id/register_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_marginTop="50dp"
        android:hint="@string/full_name" />

    <EditText
        android:layout_marginStart="16sp"
        android:id="@+id/register_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_name_text"
        android:layout_marginTop="10dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_marginStart="16sp"
        android:id="@+id/register_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_email_text"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:layout_marginEnd="16sp"
        android:id="@+id/register_create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/register_password_text"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAccent"
        android:background="@drawable/button_bg"
        android:text="register Account"
        android:textColor="@color/colorwhite" />
</RelativeLayout>
